feat: logout option

--- a/profile.html
+++ b/profile.html
@@ -12,9 +12,10 @@
 	</head>
 	<body>
 		<h4>What's your favorite ice cream?</h4>
-		<button type="button" id="chocolate">Chocolate</button>
-		<button type="button" id="vanilla">Vanilla</button>
-		<button type="button" id="strawberry">Strawberry</button>
+		<button type="button" class="choice" id="chocolate">Chocolate</button>
+		<button type="button" class="choice" id="vanilla">Vanilla</button>
+		<button type="button" class="choice" id="strawberry">Strawberry</button><br />
+    <button type="button" id="logout">Logout</button>
 	</body>
 
 	<!-- App scripts -->
